# NexusSplats

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
method/: _metrics_lpips.py  cli.py  config.py  logging.py  nexus_splats.py  train.py  types.py
method/configs/: nerfonthego.yml  phototourism.yml
method/datasets/: phototourism.py
submodules/diff-gaussian-rasterization/diff_gaussian_rasterization/: __init__.py
video/brandenburg-gate/: trajectory.json
video/sacre-coeur/: trajectory.json
video/trevi-fountain/: trajectory.json
